# cpp-t9_result

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/t9_result/: prelude.h  result.h
tests/: result_test.cpp
